# simulinkcopilot

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  baseline_metrics.json  conftest.py  matlabv1_setup.m  matlabv2native_setup.m  pyproject.toml  pytest.ini  repo_paths.py  requirements-dev.txt  requirements.txt  run_eqn2sim_gui.py  run_full_benchmark.py
.github/: dependabot.yml  pull_request_template.md
Eqn2Sim/: Eqn2Sim.tex  README.md  references.bib
backend/: __init__.py  block_library.py  builder.py  descriptor_to_simulink.py  extract_signals.py  graph_numeric.py  graph_partition.py  graph_to_simulink.py  layout.py  layout_metrics.py  layout_renderer.py  layout_visual_corrector.py  layout_workflow.py  matlab_layout_renderer.py  simulate_simulink.py  simulink_dict.py  traceability.py  validate_simulink.py
backend_v2/: builder.py  extract_signals.py  graph_to_simulink.py  layout.py  simulate_simulink.py  simulink_dict.py  traceability.py  validate_simulink.py
benchmark/: index.json
canonicalize/: __init__.py  algebraic_substitution.py  dae_reduction.py  dae_system.py  descriptor_system.py  first_order.py  linearity_check.py  nonlinear_forms.py  solve_for_derivatives.py  state_space.py
canonicalize_v2/: __init__.py  first_order.py  linearity_check.py  nonlinear_forms.py  solve_for_derivatives.py  state_space.py
docs/: architecture_refactor_plan.md  dae_support.md  distribution.md  input_frontends.md  ir_schema.md  layout_rule_catalog.json  layout_rule_ledger.md  layout_standards_review.md  matlab_bridge.md  matlab_native_backend_architecture.md  matlab_native_backend_campaign_prompt.md  matlab_native_backend_complex_systems_campaign_prompt.md  matlab_native_backend_continue_prompt.md  matlab_native_backend_front_door_diagnostics.md  matlab_native_backend_front_door_hardening_campaign_prompt.md  matlab_native_backend_matrix_expansion_campaign_prompt.md  matlab_native_backend_parity_ledger.md  (+14 more)
(+847 files in other folders)
